# eiputil

./: README.rst  requirements.txt  setup.cfg
eiputil/: __main__.py  eiputil.py
