[flake8]
max-line-length = 92
ignore = E501

[metadata]
author = sig9
author_email = sig9@sig9.org
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: Japanese
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
description = AWS EC2 EIP Utility.
keywords =
    AWS
    EC2
    EIP
license = MIT License
license_file = LICENSE
long_description = file: README.rst
maintainer = sig9
maintainer_email = sig9@sig9.org
name = contil
platforms = 
    POSIX
    Windows
    Unix
    MacOS
url = https://github.com/sig9org/eiputil
version = 0.0.1

[options]
install_requires =
    boto3
    click
    click_completion
packages = find:

[options.entry_points]
console_scripts =
    eiputil = eiputil.__main__:main

[options.packages.find]
exclude =
    tests